--- a/css/styles.css
+++ b/css/styles.css
@@ -172,13 +172,11 @@ body {
 
 .header--menu {
   flex: 1 0 content;
+  justify-content: flex-end;
 }
 
 .header--cart-menu {
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: 288px;
-  flex-basis: calc(150px + 138 * ((100vw - 320px) / 1120));
+  flex: 0 0 content;
   display: flex;
   -moz-column-gap: 20px;
        column-gap: 20px;
@@ -193,17 +191,20 @@ body {
   justify-content: end;
 }
 .menu__item {
-  padding-top: 10px;
-  padding-top: calc(5px + 5 * ((100vw - 320px) / 1120));
-  padding-bottom: 10px;
-  padding-bottom: calc(5px + 5 * ((100vw - 320px) / 1120));
-  padding-left: 18px;
-  padding-left: calc(5px + 13 * ((100vw - 320px) / 1120));
-  padding-right: 18px;
-  padding-right: calc(5px + 13 * ((100vw - 320px) / 1120));
+  padding-top: 8px;
+  padding-top: calc(5px + 3 * ((100vw - 320px) / 1120));
+  padding-bottom: 8px;
+  padding-bottom: calc(5px + 3 * ((100vw - 320px) / 1120));
+  padding-left: 15px;
+  padding-left: calc(5px + 10 * ((100vw - 320px) / 1120));
+  padding-right: 15px;
+  padding-right: calc(5px + 10 * ((100vw - 320px) / 1120));
+  border-bottom: 3px solid transparent;
+  position: relative;
 }
 .menu__item:hover, .menu__item:active, .menu__item:focus {
   background-color: #575445;
+  border-bottom: 3px solid #e6b939;
 }
 .menu__item:hover .menu__link, .menu__item:active .menu__link, .menu__item:focus .menu__link {
   color: #ffffff;
@@ -212,6 +213,14 @@ body {
   font-size: 14px;
   line-height: 1.08;
   color: #444444;
+}
+.menu__link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .cart-menu__purchase-btn {
@@ -248,10 +257,10 @@ body {
   padding-top: calc(5px + 5 * ((100vw - 320px) / 1120));
   padding-bottom: 10px;
   padding-bottom: calc(5px + 5 * ((100vw - 320px) / 1120));
-  padding-left: 18px;
-  padding-left: calc(5px + 13 * ((100vw - 320px) / 1120));
-  padding-right: 18px;
-  padding-right: calc(5px + 13 * ((100vw - 320px) / 1120));
+  padding-left: 15px;
+  padding-left: calc(5px + 10 * ((100vw - 320px) / 1120));
+  padding-right: 15px;
+  padding-right: calc(5px + 10 * ((100vw - 320px) / 1120));
   line-height: 1.4px;
   line-height: calc(1.1px + 0.3 * ((100vw - 320px) / 1120));
 }
