--- a/scss/styles/_0header.scss
+++ b/scss/styles/_0header.scss
@@ -26,6 +26,7 @@
 
 .header--menu {
 	flex: 1 0 content;
+	justify-content: flex-end
 	// 460px; to 300px
 	// flex-grow: 1;
 	// flex-shrink: 0;
@@ -33,11 +34,11 @@
 }
 
 .header--cart-menu {
-	// flex: 0 0 288px;
+	flex: 0 0 content;
 	// 25% - 288px; to 150px
-	flex-grow: 0;
-	flex-shrink: 0;
-	@include adaptive-property("flex-basis", 288, 150, 1);
+	// flex-grow: 0;
+	// flex-shrink: 0;
+	// @include adaptive-property("flex-basis", 288, 150, 1);
 
 	display: flex;
 	// column-gap: 20px; to 10px
@@ -57,10 +58,14 @@
 
 	// .menu__item
 	&__item {
-		@include adaptive-property("padding-top", 10, 5, 1);
-		@include adaptive-property("padding-bottom", 10, 5, 1);
-		@include adaptive-property("padding-left", 18, 5, 1);
-		@include adaptive-property("padding-right", 18, 5, 1);
+		@include adaptive-property("padding-top", 8, 5, 1);
+		@include adaptive-property("padding-bottom", 8, 5, 1);
+		@include adaptive-property("padding-left", 15, 5, 1);
+		@include adaptive-property("padding-right", 15, 5, 1);
+		// border-top: 3px solid transparent;
+		border-bottom: 3px solid transparent;
+		//  устанавливаем дял дальнейшего перкращения в ссылку всего этого элемента Item
+		position: relative;
 	}
 	&__item:hover,
 	&__item:active,
@@ -69,11 +74,23 @@
 			color: $header-btn-cl;
 		}
 		background-color: $header-btn-bg-cl;
+		// border-top: 3px solid #e6b939;
+		border-bottom: 3px solid #e6b939;
+		// border-radius: 6px;
 	}
 
 	// .menu__link
 	&__link {
 		@include styler($menu-fz, $menu-link-lh, $menu-link-cl);
+	}
+	// делаем ссылкой весь элемент, а не только сам текст
+	&__link::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
 	}
 }
 
@@ -118,8 +135,8 @@
 		// padding: 10px 18px;
 		@include adaptive-property("padding-top", 10, 5, 1);
 		@include adaptive-property("padding-bottom", 10, 5, 1);
-		@include adaptive-property("padding-left", 18, 5, 1);
-		@include adaptive-property("padding-right", 18, 5, 1);
+		@include adaptive-property("padding-left", 15, 5, 1);
+		@include adaptive-property("padding-right", 15, 5, 1);
 		// line-height: 1.4 -> 1
 		@include adaptive-property("line-height", 1.4, 1.1, 1);
 		//
