--- a/scss/styles/_5drone-view-n-shop.scss
+++ b/scss/styles/_5drone-view-n-shop.scss
@@ -104,10 +104,10 @@
 .shop {
 	background: #375c58 center url("./../../images/6shop-section/pattern-bg.svg") repeat;
 
-	// padding-top: 100px;
-	// padding-bottom: 100px;
-	@include adaptive-property("padding-top", 100, 10, 1);
-	@include adaptive-property("padding-bottom", 100, 10, 1);
+	padding-top: 100px;
+	padding-bottom: 100px;
+	// @include adaptive-property("padding-top", 100, 10, 1);
+	// @include adaptive-property("padding-bottom", 100, 10, 1);
 	// .shop__description
 
 	&__description {
@@ -122,7 +122,7 @@
 
 	&__subtitle {
 		@include styler($section-subtitle-fz, $section-subtitle-lh, $shop-subtitle-cl);
-		@include adaptive-property("font-size", 14, 9, 1);
+		// @include adaptive-property("font-size", 14, 9, 1);
 	}
 
 	// .shop__title
@@ -130,14 +130,14 @@
 	&__title {
 		@include styler($section-title-fz, $section-title-lh, $section-subtitle-cl);
 		font-family: "Roboto";
-		@include adaptive-property("font-size", 36, 16, 1);
+		// @include adaptive-property("font-size", 36, 16, 1);
 	}
 
 	// .shop__txt
 
 	&__txt {
 		color: #fafafc;
-		@include adaptive-property("font-size", 16, 10, 1);
+		// @include adaptive-property("font-size", 16, 10, 1);
 	}
 
 	// .shop__link
